--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -20,7 +20,7 @@ jobs:
 
   deploy:
     docker:
-      - image: circleci/buildpack-deps:stretch
+      - image: cimg/base:2022.06
     steps:
       - checkout
       - setup_remote_docker:
